# myAgentTools

./: .gitignore  AGENTS.md  README.md  launch_gui.bat  launch_gui.pyw  oa-knowledge-base-solution.md  pyproject.toml  rag-knowledge-base-guide.md  开场白.txt
docs/: architecture.md  project-status.md  session-notes-2026-03-30.md
examples/: default_template_config.json  sample_deck.json
src/my_agent_tools/: __init__.py  ai_models.py  app_settings.py  cli.py  desktop_app.py  openai_planner.py  specs.py  template_config.py  themes.py
src/my_agent_tools/tools/: __init__.py  base.py  html.py  md.py  ppt.py
tests/: test_app_settings.py  test_openai_planner.py  test_ppt.py  test_specs.py
